--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
@@ -7,6 +7,6 @@
             <p>{{item.amount}} </p>
         </div>
 
-        <div class="remove-button"></div>
+        <div class="remove-button" (click)="deleteClicked()"></div>
     </div>
 </div>
