--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -7,10 +7,10 @@
                 <div *ngFor="let item of budgetItems">
                     <app-budget-item-card
                     [item]="item" style="margin-bottom: 20px;display: block;"
-                    *ngIf="item.amount >= 0"></app-budget-item-card>
+                    *ngIf="item.amount >= 0"
+                    (deleteButton)="deleteCard(item)"></app-budget-item-card>
                 </div>
             </div>
-
         </div>
 
         <div class="expense-column">
@@ -19,7 +19,8 @@
                 <div *ngFor="let item of budgetItems">
                     <app-budget-item-card
                     [item]="item" style="margin-bottom: 20px;display: block;"
-                    *ngIf="item.amount < 0"></app-budget-item-card>
+                    *ngIf="item.amount < 0"
+                    (deleteButton)="deleteCard(item)"></app-budget-item-card>
                 </div>
             </div>
         </div>
