--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <section class="total-budget-section">
-    <h2 class="red">2005</h2>
+    <h2 class="red">{{amountTotal}}</h2>
 </section>
 
 <section class="add-items">
@@ -12,4 +12,4 @@
     </div>
 </section>
 <hr style="margin-top: 0px;">
-<app-budget-item-list [budgetItems]="budgetItems"></app-budget-item-list>
+<app-budget-item-list [budgetItems]="budgetItems" (deleteButtonClicked)="deleteCard($event)"></app-budget-item-list>
